--- a/config.json
+++ b/config.json
@@ -39,7 +39,7 @@
       "darkPrimaryColor": "#303f9f",
       "accentColor": "#ff4081",
       "lightAccentColor": "#ff80ab",
-      "darkAccentColor": "#f50057",
+      "darkAccentColor": "#ef2b49",
       "errorColor": "#dd2c00",
       "backgroundColor": "#ffffff"
     },
