--- a/config.json
+++ b/config.json
@@ -29,31 +29,31 @@
   },
   "defaultConfig": {
     "colors": {
-      "primaryTextColor": "#212121",
-      "primaryBackgroundColor": "#ffffff",
+      "primaryTextColor": "#ffffff",
+      "primaryBackgroundColor": "#1d1d1d",
       "secondaryTextColor": "#737373",
       "disabledTextColor": "#9b9b9b",
       "dividerColor": "#dbdbdb",
-      "primaryColor": "#3f51b5",
-      "lightPrimaryColor": "#c5cae9",
-      "darkPrimaryColor": "#303f9f",
-      "accentColor": "#ff4081",
-      "lightAccentColor": "#ff80ab",
+      "primaryColor": "#2f2f2f",
+      "lightPrimaryColor": "#525252",
+      "darkPrimaryColor": "#525252",
+      "accentColor": "#ef4949",
+      "lightAccentColor": "#01f5fd",
       "darkAccentColor": "#ef2b49",
       "errorColor": "#dd2c00",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2f2f2f"
     },
     "images": {
       "background": ""
     },
     "fonts": {
       "primaryFontFamily": {
-        "name": "",
-        "url": ""
+        "name": "Open Sans",
+        "url": "https://fonts.googleapis.com/css?family=Open+Sans"
       },
       "titleFontFamily": {
-        "name": "",
-        "url": ""
+        "name": "Roboto",
+        "url": "https://fonts.googleapis.com/css?family=Roboto"
       }
     },
     "menu": "polymermenu"
