--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "koapp-theme-click",
+  "name": "click",
   "identifier": "koapp-theme-click",
   "description": {
     "en-US" : "click"
